--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@prisma-cms/module-bilerplate",
-  "description": "Module boilerplate for @prisma-cms/server",
-  "version": "1.1.5",
+  "name": "@prisma-cms/diagram-module",
+  "description": "Diagram module for @prisma-cms/server",
+  "version": "1.2.0",
   "main": "src/",
   "files": [
     "src"
@@ -41,10 +41,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/prisma-cms/module-boilerplate.git"
+    "url": "git+https://github.com/prisma-cms/diagram-module.git"
   },
   "bugs": {
-    "url": "https://github.com/prisma-cms/module-boilerplate/issues"
+    "url": "https://github.com/prisma-cms/diagram-module/issues"
   },
-  "homepage": "https://github.com/prisma-cms/module-boilerplate#readme"
+  "homepage": "https://github.com/prisma-cms/diagram-module#readme"
 }
